--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -77,6 +77,8 @@ static bool CheckSharingRoad(int32 p1);
 static bool CheckSharingWater(int32 p1);
 static bool CheckSharingAir(int32 p1);
 
+static bool LinkGraphDistributionSettingGUI(SettingOnGuiCtrlData &data);
+
 /* End - Callback Functions for the various settings */
 
 /* Begin - GUI order callbacks */
@@ -160,7 +162,7 @@ SDT_NULL   =   SDT_NULL($length, $from, $to, $extver),
 SDT_XREF     = SDT_XREF(         $from, $to, $extver, $xref, $xrefcvt),
 SDT_END    = SDT_END()
 
-SDT_LINKGRAPH_PER_CARGO = SDT_ENUM(GameSettings, linkgraph.distribution_per_cargo[$linkgraph_cargo], SLE_UINT8, $flags | SLF_NOT_IN_CONFIG, $guiflags | SGF_NO_NEWGAME, DT_PER_CARGO_DEFAULT, STR_CONFIG_SETTING_DISTRIBUTION_PER_CARGO, STR_CONFIG_SETTING_DISTRIBUTION_PER_CARGO_HELPTEXT, $proc, $guiproc, $from, $to, SC_EXPERT, false, SlXvFeatureTest(XSLFTO_AND, XSLFI_LINKGRAPH_MODES), nullptr, _linkgraph_mode_per_cargo),
+SDT_LINKGRAPH_PER_CARGO = SDT_ENUM(GameSettings, linkgraph.distribution_per_cargo[$linkgraph_cargo], SLE_UINT8, $flags | SLF_NOT_IN_CONFIG, $guiflags | SGF_NO_NEWGAME, DT_PER_CARGO_DEFAULT, STR_CONFIG_SETTING_DISTRIBUTION_PER_CARGO, STR_CONFIG_SETTING_DISTRIBUTION_PER_CARGO_HELPTEXT, $proc, LinkGraphDistributionSettingGUI, $from, $to, SC_EXPERT, false, SlXvFeatureTest(XSLFTO_AND, XSLFI_LINKGRAPH_MODES), nullptr, _linkgraph_mode_per_cargo),
 
 [validation]
 SDTG_VAR = static_assert($max <= MAX_$type, "Maximum value for $var exceeds storage size");
@@ -1007,6 +1009,7 @@ def      = DT_MANUAL
 enumlist = _linkgraph_mode_symmetric
 str      = STR_CONFIG_SETTING_DISTRIBUTION_PAX
 strhelp  = STR_CONFIG_SETTING_DISTRIBUTION_PAX_HELPTEXT
+guiproc  = LinkGraphDistributionSettingGUI
 
 [SDT_ENUM]
 base     = GameSettings
@@ -1017,6 +1020,7 @@ def      = DT_MANUAL
 enumlist = _linkgraph_mode_symmetric
 str      = STR_CONFIG_SETTING_DISTRIBUTION_MAIL
 strhelp  = STR_CONFIG_SETTING_DISTRIBUTION_MAIL_HELPTEXT
+guiproc  = LinkGraphDistributionSettingGUI
 
 [SDT_ENUM]
 base     = GameSettings
@@ -1027,6 +1031,7 @@ def      = DT_MANUAL
 enumlist = _linkgraph_mode_symmetric
 str      = STR_CONFIG_SETTING_DISTRIBUTION_ARMOURED
 strhelp  = STR_CONFIG_SETTING_DISTRIBUTION_ARMOURED_HELPTEXT
+guiproc  = LinkGraphDistributionSettingGUI
 
 [SDT_ENUM]
 base     = GameSettings
@@ -1037,6 +1042,7 @@ def      = DT_MANUAL
 enumlist = _linkgraph_mode_asymmetric
 str      = STR_CONFIG_SETTING_DISTRIBUTION_DEFAULT
 strhelp  = STR_CONFIG_SETTING_DISTRIBUTION_DEFAULT_HELPTEXT
+guiproc  = LinkGraphDistributionSettingGUI
 
 [SDT_LINKGRAPH_PER_CARGO]
 linkgraph_cargo = 0
