Settings: Merge orderproc into guiproc

--- a/src/table/misc_settings.ini
+++ b/src/table/misc_settings.ini
@@ -26,7 +26,7 @@ SDTG_OMANY = SDTG_OMANY($name, $type,          $flags, $guiflags, $var, $def,   
 SDTG_STR   =   SDTG_STR($name, $type,          $flags, $guiflags, $var, $def,                               $str, $strhelp, $strval, $proc, $guiproc, $from, $to, $cat, $startup, $extver, nullptr),
 SDTG_SSTR  =  SDTG_SSTR($name, $type,          $flags, $guiflags, $var, $def,                               $str, $strhelp, $strval, $proc, $guiproc, $from, $to, $cat, $startup, $extver, nullptr),
 SDTG_BOOL  =  SDTG_BOOL($name,                 $flags, $guiflags, $var, $def,                               $str, $strhelp, $strval, $proc, $guiproc, $from, $to, $cat, $startup, $extver, nullptr),
-SDTG_VAR   =   SDTG_VAR($name, $type,          $flags, $guiflags, $var, $def, $min, $max, $interval,        $str, $strhelp, $strval, $proc, $guiproc, $from, $to, $cat, $startup, $extver, nullptr, $orderproc),
+SDTG_VAR   =   SDTG_VAR($name, $type,          $flags, $guiflags, $var, $def, $min, $max, $interval,        $str, $strhelp, $strval, $proc, $guiproc, $from, $to, $cat, $startup, $extver, nullptr),
 SDTG_END   = SDTG_END()
 
 [validation]
@@ -48,7 +48,6 @@ to       = SL_MAX_VERSION
 cat      = SC_ADVANCED
 startup  = true
 extver   = SlXvFeatureTest()
-orderproc = nullptr
 
 
 
