--- a/src/table/company_settings.ini
+++ b/src/table/company_settings.ini
@@ -17,7 +17,7 @@ static const SettingDesc _company_settings[] = {
 };
 [templates]
 SDT_BOOL = SDT_BOOL($base, $var,        $flags, $guiflags, $def,                        $str, $strhelp, $strval, $proc, $guiproc, $from, $to, $cat, $startup, $extver, $patxname),
-SDT_VAR  =  SDT_VAR($base, $var, $type, $flags, $guiflags, $def, $min, $max, $interval, $str, $strhelp, $strval, $proc, $guiproc, $from, $to, $cat, $startup, $extver, $patxname, $orderproc),
+SDT_VAR  =  SDT_VAR($base, $var, $type, $flags, $guiflags, $def, $min, $max, $interval, $str, $strhelp, $strval, $proc, $guiproc, $from, $to, $cat, $startup, $extver, $patxname),
 SDT_NULL =  SDT_NULL($length, $from, $to, $extver),
 SDT_END  = SDT_END()
 
@@ -40,7 +40,6 @@ cat      = SC_ADVANCED
 startup  = false
 extver   = SlXvFeatureTest()
 patxname = nullptr
-orderproc = nullptr
 
 
 
