--- a/src/table/gameopt_settings.ini
+++ b/src/table/gameopt_settings.ini
@@ -38,12 +38,12 @@ static const SettingDesc _gameopt_settings[] = {
 };
 [templates]
 SDTG_GENERAL = SDTG_GENERAL($name, $sdt_cmd, $sle_cmd, $type, $flags, $guiflags, $var, $length, $def, $min, $max, $interval, $full, $str, $strhelp, $strval, $proc, $guiproc, $from, $to, $cat, $startup, $extver, nullptr),
-SDTG_VAR     =     SDTG_VAR($name,                     $type, $flags, $guiflags, $var,          $def, $min, $max, $interval,        $str, $strhelp, $strval, $proc, $guiproc, $from, $to, $cat, $startup, $extver, nullptr, $orderproc),
+SDTG_VAR     =     SDTG_VAR($name,                     $type, $flags, $guiflags, $var,          $def, $min, $max, $interval,        $str, $strhelp, $strval, $proc, $guiproc, $from, $to, $cat, $startup, $extver, nullptr),
 SDT_NULL     =   SDT_NULL($length, $from, $to, $extver),
 SDTC_OMANY   = SDTC_OMANY(       $var, $type, $flags, $guiflags, $def,       $max, $full,            $str, $strhelp, $strval, $proc, $guiproc, $from, $to,        $cat, $startup, $extver, nullptr),
 SDTG_OMANY   = SDTG_OMANY($name,       $type, $flags, $guiflags, $var, $def, $max, $full,            $str, $strhelp, $strval, $proc, $guiproc, $from, $to,        $cat, $startup, $extver, nullptr),
 SDT_OMANY    =  SDT_OMANY($base, $var, $type, $flags, $guiflags, $def,       $max, $full,            $str, $strhelp, $strval, $proc, $guiproc, $from, $to, $load, $cat, $startup, $extver, nullptr),
-SDT_VAR      =    SDT_VAR($base, $var, $type, $flags, $guiflags, $def, $min, $max,        $interval, $str, $strhelp, $strval, $proc, $guiproc, $from, $to,        $cat, $startup, $extver, nullptr, $orderproc),
+SDT_VAR      =    SDT_VAR($base, $var, $type, $flags, $guiflags, $def, $min, $max,        $interval, $str, $strhelp, $strval, $proc, $guiproc, $from, $to,        $cat, $startup, $extver, nullptr),
 SDT_END      = SDT_END()
 
 [validation]
@@ -68,7 +68,6 @@ to       = SL_MAX_VERSION
 cat      = SC_ADVANCED
 startup  = false
 extver   = SlXvFeatureTest()
-orderproc = nullptr
 
 
 
