--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -77,21 +77,20 @@ static bool CheckSharingRoad(int32 p1);
 static bool CheckSharingWater(int32 p1);
 static bool CheckSharingAir(int32 p1);
 
-static bool LinkGraphDistributionSettingGUI(SettingOnGuiCtrlData &data);
-
 /* End - Callback Functions for the various settings */
-
-/* Begin - GUI order callbacks */
-
-static int OrderTownGrowthRate(uint nth);
-
-/* End - GUI order callbacks */
 
 /* Begin - xref conversion callbacks */
 
 static int64 LinkGraphDistModeXrefChillPP(int64 val);
 
 /* End - xref conversion callbacks */
+
+/* Begin - GUI callbacks */
+
+static bool LinkGraphDistributionSettingGUI(SettingOnGuiCtrlData &data);
+static bool OrderTownGrowthRate(SettingOnGuiCtrlData &data);
+
+/* End - GUI callbacks */
 
 static const SettingDescEnumEntry _linkgraph_mode_symmetric[] = {
 { DT_MANUAL, STR_CONFIG_SETTING_DISTRIBUTION_MANUAL },
@@ -145,18 +144,18 @@ const SettingDesc _settings[] = {
 };
 [templates]
 SDTG_BOOL  =  SDTG_BOOL($name,              $flags, $guiflags, $var, $def,                        $str, $strhelp, $strval, $proc, $guiproc, $from, $to,        $cat, $startup, $extver, $patxname),
-SDTG_VAR   =   SDTG_VAR($name,       $type, $flags, $guiflags, $var, $def, $min, $max, $interval, $str, $strhelp, $strval, $proc, $guiproc, $from, $to,        $cat, $startup, $extver, $patxname, $orderproc),
+SDTG_VAR   =   SDTG_VAR($name,       $type, $flags, $guiflags, $var, $def, $min, $max, $interval, $str, $strhelp, $strval, $proc, $guiproc, $from, $to,        $cat, $startup, $extver, $patxname),
 SDTG_ENUM   = SDTG_ENUM($name,       $type, $flags, $guiflags, $var, $def,                        $str, $strhelp,          $proc, $guiproc, $from, $to,        $cat, $startup, $extver, $patxname,             $enumlist),
 SDTG_OMANY = SDTG_OMANY($name,       $type, $flags, $guiflags, $var, $def,       $max, $full,     $str, $strhelp, $strval, $proc, $guiproc, $from, $to,        $cat, $startup, $extver, $patxname),
 SDTC_BOOL  =  SDTC_BOOL(       $var,        $flags, $guiflags, $def,                              $str, $strhelp, $strval, $proc, $guiproc, $from, $to,        $cat, $startup, $extver, $patxname),
 SDTC_LIST  =  SDTC_LIST(       $var, $type, $flags, $guiflags, $def,                              $str, $strhelp, $strval, $proc, $guiproc, $from, $to,        $cat, $startup, $extver, $patxname),
 SDTC_OMANY = SDTC_OMANY(       $var, $type, $flags, $guiflags, $def,             $max, $full,     $str, $strhelp, $strval, $proc, $guiproc, $from, $to,        $cat, $startup, $extver, $patxname),
 SDTC_STR   =   SDTC_STR(       $var, $type, $flags, $guiflags, $def,                              $str, $strhelp, $strval, $proc, $guiproc, $from, $to,        $cat, $startup, $extver, $patxname),
-SDTC_VAR   =   SDTC_VAR(       $var, $type, $flags, $guiflags, $def,       $min, $max, $interval, $str, $strhelp, $strval, $proc, $guiproc, $from, $to,        $cat, $startup, $extver, $patxname, $orderproc),
+SDTC_VAR   =   SDTC_VAR(       $var, $type, $flags, $guiflags, $def,       $min, $max, $interval, $str, $strhelp, $strval, $proc, $guiproc, $from, $to,        $cat, $startup, $extver, $patxname),
 SDT_BOOL   =   SDT_BOOL($base, $var,        $flags, $guiflags, $def,                              $str, $strhelp, $strval, $proc, $guiproc, $from, $to,        $cat, $startup, $extver, $patxname),
 SDT_OMANY  =  SDT_OMANY($base, $var, $type, $flags, $guiflags, $def,             $max, $full,     $str, $strhelp, $strval, $proc, $guiproc, $from, $to, $load, $cat, $startup, $extver, $patxname),
 SDT_STR    =    SDT_STR($base, $var, $type, $flags, $guiflags, $def,                              $str, $strhelp, $strval, $proc, $guiproc, $from, $to,        $cat, $startup, $extver, $patxname),
-SDT_VAR    =    SDT_VAR($base, $var, $type, $flags, $guiflags, $def,       $min, $max, $interval, $str, $strhelp, $strval, $proc, $guiproc, $from, $to,        $cat, $startup, $extver, $patxname, $orderproc),
+SDT_VAR    =    SDT_VAR($base, $var, $type, $flags, $guiflags, $def,       $min, $max, $interval, $str, $strhelp, $strval, $proc, $guiproc, $from, $to,        $cat, $startup, $extver, $patxname),
 SDT_ENUM   =   SDT_ENUM($base, $var, $type, $flags, $guiflags, $def,                              $str, $strhelp,          $proc, $guiproc, $from, $to,        $cat, $startup, $extver, $patxname,             $enumlist),
 SDT_NULL   =   SDT_NULL($length, $from, $to, $extver),
 SDT_XREF     = SDT_XREF(         $from, $to, $extver, $xref, $xrefcvt),
@@ -190,7 +189,6 @@ extver   = SlXvFeatureTest()
 patxname = nullptr
 xref     = <this parameter must be set>
 xrefcvt  = nullptr
-orderproc = nullptr
 enumlist = <this parameter must be set>
 
 
@@ -2505,7 +2503,7 @@ max      = 4
 str      = STR_CONFIG_SETTING_TOWN_GROWTH
 strhelp  = STR_CONFIG_SETTING_TOWN_GROWTH_HELPTEXT
 strval   = STR_CONFIG_SETTING_TOWN_GROWTH_EXTREME_SLOW
-orderproc = OrderTownGrowthRate
+guiproc  = OrderTownGrowthRate
 
 [SDT_BOOL]
 base     = GameSettings
