--- a/src/table/win32_settings.ini
+++ b/src/table/win32_settings.ini
@@ -15,7 +15,7 @@ static const SettingDescGlobVarList _win32_settings[] = {
 #endif /* _WIN32 */
 [templates]
 SDTG_BOOL = SDTG_BOOL($name,        $flags, $guiflags, $var, $def,                        $str, $strhelp, $strval, $proc, $guiproc, $from, $to, $cat, $startup, $extver, nullptr),
-SDTG_VAR  =  SDTG_VAR($name, $type, $flags, $guiflags, $var, $def, $min, $max, $interval, $str, $strhelp, $strval, $proc, $guiproc, $from, $to, $cat, $startup, $extver, nullptr, $orderproc),
+SDTG_VAR  =  SDTG_VAR($name, $type, $flags, $guiflags, $var, $def, $min, $max, $interval, $str, $strhelp, $strval, $proc, $guiproc, $from, $to, $cat, $startup, $extver, nullptr),
 SDTG_END  = SDTG_END()
 
 [validation]
@@ -36,7 +36,6 @@ to       = SL_MAX_VERSION
 cat      = SC_ADVANCED
 startup  = true
 extver   = SlXvFeatureTest()
-orderproc = nullptr
 
 
 [SDTG_BOOL]
