--- a/src/table/window_settings.ini
+++ b/src/table/window_settings.ini
@@ -11,7 +11,7 @@ static const SettingDesc _window_settings[] = {
 };
 [templates]
 SDT_BOOL = SDT_BOOL($base, $var,        $flags, $guiflags, $def,                        $str, $strhelp, $strval, $proc, $guiproc, $from, $to, $cat, $startup, $extver, nullptr),
-SDT_VAR  =  SDT_VAR($base, $var, $type, $flags, $guiflags, $def, $min, $max, $interval, $str, $strhelp, $strval, $proc, $guiproc, $from, $to, $cat, $startup, $extver, nullptr, $orderproc),
+SDT_VAR  =  SDT_VAR($base, $var, $type, $flags, $guiflags, $def, $min, $max, $interval, $str, $strhelp, $strval, $proc, $guiproc, $from, $to, $cat, $startup, $extver, nullptr),
 SDT_END  = SDT_END()
 
 [validation]
@@ -33,7 +33,6 @@ to       = SL_MAX_VERSION
 cat      = SC_ADVANCED
 startup  = false
 extver   = SlXvFeatureTest()
-orderproc = nullptr
 
 
 
