--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -546,6 +546,7 @@ jobs:
         echo "::endgroup::"
 
     - name: Import code signing certificates
+      if: ${{ false }} # disable for now
       uses: Apple-Actions/import-codesign-certs@v1
       with:
         # The certificates in a PKCS12 file encoded as a base64 string
