Initial commit to allow configuring running costs as a fraction (1/1 default thru 1/4) independently for both vehicles stopped in depots (doesn't work for planes, I'm not smart enuff), or vehicles that are stationary.

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -273,6 +273,30 @@ strval   = STR_SEA_LEVEL_LOW
 cat      = SC_BASIC
 
 [SDT_VAR]
+var      = difficulty.vehicle_costs_in_depot
+type     = SLE_UINT8
+from     = SLV_97
+flags    = SF_NEWGAME_ONLY | SF_SCENEDIT_TOO
+def      = 1
+min      = 1
+max      = 4
+str      = STR_CONFIG_SETTING_RUNNING_COSTS_IN_DEPOT
+strhelp  = STR_CONFIG_SETTING_RUNNING_COSTS_IN_DEPOT_HELPTEXT
+strval   = STR_CONFIG_SETTING_RUNNING_COSTS_IN_DEPOT_VALUE
+
+[SDT_VAR]
+var      = difficulty.vehicle_costs_when_stopped
+type     = SLE_UINT8
+from     = SLV_97
+flags    = SF_NEWGAME_ONLY | SF_SCENEDIT_TOO
+def      = 1
+min      = 1
+max      = 4
+str      = STR_CONFIG_SETTING_RUNNING_COSTS_WHEN_STOPPED
+strhelp  = STR_CONFIG_SETTING_RUNNING_COSTS_WHEN_STOPPED_HELPTEXT
+strval   = STR_CONFIG_SETTING_RUNNING_COSTS_WHEN_STOPPED_VALUE
+
+[SDT_VAR]
 var      = difficulty.competitor_speed
 type     = SLE_UINT8
 from     = SLV_97
