Fix running costs divider settings saveload

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -282,6 +282,7 @@ max      = 8
 str      = STR_CONFIG_SETTING_RUNNING_COSTS_IN_DEPOT
 strhelp  = STR_CONFIG_SETTING_RUNNING_COSTS_IN_DEPOT_HELPTEXT
 strval   = STR_CONFIG_SETTING_RUNNING_COSTS_IN_DEPOT_VALUE
+patxname = ""difficulty.vehicle_costs_in_depot""
 
 [SDT_VAR]
 var      = difficulty.vehicle_costs_when_stopped
@@ -293,6 +294,8 @@ max      = 8
 str      = STR_CONFIG_SETTING_RUNNING_COSTS_WHEN_STOPPED
 strhelp  = STR_CONFIG_SETTING_RUNNING_COSTS_WHEN_STOPPED_HELPTEXT
 strval   = STR_CONFIG_SETTING_RUNNING_COSTS_WHEN_STOPPED_VALUE
+strval   = STR_CONFIG_SETTING_RUNNING_COSTS_IN_DEPOT_VALUE
+patxname = ""difficulty.vehicle_costs_when_stopped""
 
 [SDT_VAR]
 var      = difficulty.competitor_speed
