Introduces a new setting (defaulted off) to allow preventing road vehicles from performing so-called quantum tunelling through other vehicles blocking their path.

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -1799,6 +1799,14 @@ patxname = ""roadveh_articulated_overtaking.vehicle.roadveh_articulated_overtaki
 cat      = SC_BASIC
 
 [SDT_BOOL]
+var      = vehicle.roadveh_cant_quantum_tunnel
+def      = false
+str      = STR_CONFIG_SETTING_ROADVEH_CANT_QUANTUM_TUNNEL
+strhelp  = STR_CONFIG_SETTING_ROADVEH_CANT_QUANTUM_TUNNEL_HELPTEXT
+patxname = ""roadveh_cant_quantum_tunnel.vehicle.roadveh_cant_quantum_tunnel""
+cat      = SC_BASIC
+
+[SDT_BOOL]
 var      = vehicle.drive_through_train_depot
 def      = false
 str      = STR_CONFIG_SETTING_DRIVE_THROUGH_TRAIN_DEPOT
