Add setting to disable "big GUI" NewGRFs

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -5399,6 +5399,12 @@ flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC
 def      = false
 cat      = SC_EXPERT
 
+[SDTC_BOOL]
+var      = gui.newgrf_disable_big_gui
+flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC
+def      = false
+cat      = SC_EXPERT
+
 [SDTC_VAR]
 var      = gui.console_backlog_timeout
 type     = SLE_UINT16
