--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -222,7 +222,7 @@ var      = difficulty.industry_density
 type     = SLE_UINT8
 from     = SLV_97
 flags    = SF_GUI_DROPDOWN
-def      = ID_END - 1
+def      = ID_HIGH
 min      = 0
 max      = ID_END - 1
 interval = 1
@@ -3708,6 +3708,15 @@ def      = 1
 min      = 1
 max      = 5000
 cat      = SC_BASIC
+
+[SDT_VAR]
+var      = game_creation.custom_industry_number
+type     = SLE_UINT16
+def      = 1
+min      = 1
+max      = 64000
+cat      = SC_BASIC
+patxname = ""game_creation.custom_industry_number""
 
 [SDT_VAR]
 var      = construction.extra_tree_placement
