Allow setting autosave interval to a custom number of days

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -62,6 +62,7 @@ static void VelocityUnitsChanged(int32 new_value);
 static void ChangeTrackTypeSortMode(int32 new_value);
 static void PublicRoadsSettingChange(int32 new_value);
 static void TrainSpeedAdaptationChanged(int32 new_value);
+static void AutosaveModeChanged(int32 new_value);
 static bool CheckSharingRail(int32 &new_value);
 static void SharingRailChanged(int32 new_value);
 static bool CheckSharingRoad(int32 &new_value);
@@ -4084,11 +4085,25 @@ var      = gui.autosave
 type     = SLE_UINT8
 flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC | SF_GUI_DROPDOWN
 def      = 1
-max      = 4
+max      = 5
 full     = _autosave_interval
 str      = STR_CONFIG_SETTING_AUTOSAVE
 strhelp  = STR_CONFIG_SETTING_AUTOSAVE_HELPTEXT
 strval   = STR_GAME_OPTIONS_AUTOSAVE_DROPDOWN_OFF
+post_cb  = AutosaveModeChanged
+cat      = SC_BASIC
+
+[SDTC_VAR]
+var      = gui.autosave_custom_days
+type     = SLE_UINT16
+flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC
+def      = 14
+min      = 1
+max      = 4000
+interval = 7
+str      = STR_CONFIG_SETTING_AUTOSAVE_CUSTOM_DAYS
+strhelp  = STR_CONFIG_SETTING_AUTOSAVE_CUSTOM_DAYS_HELPTEXT
+strval   = STR_TIMETABLE_DAYS
 cat      = SC_BASIC
 
 [SDTC_BOOL]
