--- a/src/table/settings/gameopt_settings.ini
+++ b/src/table/settings/gameopt_settings.ini
@@ -27,7 +27,7 @@ static_assert(_locale_currencies.size() == CURRENCY_END);
 static constexpr std::initializer_list<const char*> _locale_units{"imperial", "metric", "si", "gameunits"};
 static constexpr std::initializer_list<const char*> _town_names{"english", "french", "german", "american", "latin", "silly", "swedish", "dutch", "finnish", "polish", "slovak", "norwegian", "hungarian", "austrian", "romanian", "czech", "swiss", "danish", "turkish", "italian", "catalan"};
 static constexpr std::initializer_list<const char*> _climates{"temperate", "arctic", "tropic", "toyland"};
-static constexpr std::initializer_list<const char*> _autosave_interval{"off", "monthly", "quarterly", "half year", "yearly"};
+static constexpr std::initializer_list<const char*> _autosave_interval{"off", "monthly", "quarterly", "half year", "yearly", "custom_days"};
 static constexpr std::initializer_list<const char*> _roadsides{"left", "right"};
 static constexpr std::initializer_list<const char*> _savegame_date{"long", "short", "iso"};
 static constexpr std::initializer_list<const char*> _savegame_overwrite_confirm{"no", "different", "not same", "yes"};
