--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -4085,7 +4085,7 @@ var      = gui.autosave
 type     = SLE_UINT8
 flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC | SF_GUI_DROPDOWN
 def      = 1
-max      = 5
+max      = 6
 full     = _autosave_interval
 str      = STR_CONFIG_SETTING_AUTOSAVE
 strhelp  = STR_CONFIG_SETTING_AUTOSAVE_HELPTEXT
@@ -4104,6 +4104,19 @@ interval = 7
 str      = STR_CONFIG_SETTING_AUTOSAVE_CUSTOM_DAYS
 strhelp  = STR_CONFIG_SETTING_AUTOSAVE_CUSTOM_DAYS_HELPTEXT
 strval   = STR_TIMETABLE_DAYS
+cat      = SC_BASIC
+
+[SDTC_VAR]
+var      = gui.autosave_custom_minutes
+type     = SLE_UINT16
+flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC
+def      = 30
+min      = 3
+max      = 8000
+interval = 10
+str      = STR_CONFIG_SETTING_AUTOSAVE_CUSTOM_MINUTES
+strhelp  = STR_CONFIG_SETTING_AUTOSAVE_CUSTOM_MINUTES_HELPTEXT
+strval   = STR_TIMETABLE_MINUTES
 cat      = SC_BASIC
 
 [SDTC_BOOL]
