--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -5196,6 +5196,14 @@ strhelp  = STR_CONFIG_SETTING_SHOW_RESTRICTED_SIG_DEF_HELPTEXT
 post_cb  = [](auto) { MarkWholeScreenDirty(); }
 
 [SDTC_BOOL]
+var      = gui.show_all_signal_default
+flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC
+def      = false
+str      = STR_CONFIG_SETTING_SHOW_ALL_SIG_DEF
+strhelp  = STR_CONFIG_SETTING_SHOW_ALL_SIG_DEF_HELPTEXT
+post_cb  = [](auto) { UpdateRailGuiSprites(); MarkWholeScreenDirty(); }
+
+[SDTC_BOOL]
 var      = gui.show_adv_tracerestrict_features
 flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC
 def      = false
