Add setting to increase cost/distance of aircraft linkgraph links

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -1227,6 +1227,18 @@ strval   = STR_CONFIG_SETTING_PERCENTAGE
 strhelp  = STR_CONFIG_SETTING_SHORT_PATH_SATURATION_HELPTEXT
 
 [SDT_VAR]
+var      = linkgraph.aircraft_link_scale
+type     = SLE_UINT16
+def      = 100
+min      = 100
+max      = 1000
+interval = 50
+str      = STR_CONFIG_SETTING_AIRCRAFT_PATH_COST
+strval   = STR_CONFIG_SETTING_PERCENTAGE
+strhelp  = STR_CONFIG_SETTING_AIRCRAFT_PATH_COST_HELPTEXT
+extver   = SlXvFeatureTest(XSLFTO_AND, XSLFI_LINKGRAPH_AIRCRAFT, 1, 1)
+
+[SDT_VAR]
 var      = economy.old_town_cargo_factor
 type     = SLE_INT8
 def      = 0
