--- a/src/3rdparty/CMakeLists.txt
+++ b/src/3rdparty/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(opengl)
 add_subdirectory(os2)
 add_subdirectory(cpp-btree)
 add_subdirectory(mingw-std-threads)
+add_subdirectory(monocypher)
