--- a/src/3rdparty/CMakeLists.txt
+++ b/src/3rdparty/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(os2)
 add_subdirectory(cpp-btree)
 add_subdirectory(mingw-std-threads)
 add_subdirectory(monocypher)
+add_subdirectory(randombytes)
