--- a/src/table/settings/network_secrets_settings.ini
+++ b/src/table/settings/network_secrets_settings.ini
@@ -84,6 +84,7 @@ type     = SLE_STR
 length   = NETWORK_SERVER_ID_LENGTH
 flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC | SF_NETWORK_ONLY
 def      = nullptr
+startup  = true
 
 [SDTC_SSTR]
 var      = network.server_invite_code
