Add: Cargo delivery distribution modes

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -122,6 +122,12 @@ static const SettingDescEnumEntry _train_braking_model[] = {
 { 0, STR_NULL }
 };
 
+static const SettingDescEnumEntry _station_delivery_mode[] = {
+{ SD_NEAREST_FIRST, STR_CONFIG_SETTING_ORIGINAL},
+{ SD_BALANCED, STR_CONFIG_SETTING_DELIVERY_BALANCED},
+{ 0, STR_NULL }
+};
+
 /* Some settings do not need to be synchronised when playing in multiplayer.
  * These include for example the GUI settings and will not be saved with the
  * savegame.
@@ -1935,6 +1941,14 @@ from     = SLV_SERVE_NEUTRAL_INDUSTRIES
 str      = STR_CONFIG_SETTING_SERVE_NEUTRAL_INDUSTRIES
 strhelp  = STR_CONFIG_SETTING_SERVE_NEUTRAL_INDUSTRIES_HELPTEXT
 post_cb  = StationCatchmentChanged
+
+[SDT_ENUM]
+var      = station.station_delivery_mode
+type     = SLE_UINT8
+def      = SD_NEAREST_FIRST
+enumlist = _station_delivery_mode
+str      = STR_CONFIG_SETTING_CARGO_DELIVERY_MODE
+strhelp  = STR_CONFIG_SETTING_CARGO_DELIVERY_MODE_HELPTEXT
 
 [SDT_BOOL]
 var      = order.gradual_loading
