Add: Through load speed limit setting

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -1355,6 +1355,19 @@ strval   = STR_CONFIG_SETTING_PERCENTAGE
 post_cb  = RoadVehSlopeSteepnessChanged
 cat      = SC_EXPERT
 
+[SDT_VAR]
+var      = vehicle.through_load_speed_limit
+type     = SLE_UINT16
+def      = 15
+min      = 15
+max      = 65535
+interval = 5
+str      = STR_CONFIG_SETTING_THROUGH_LOAD_SPEED_LIMIT
+strhelp  = STR_CONFIG_SETTING_THROUGH_LOAD_SPEED_LIMIT_HELPTEXT
+strval   = STR_CONFIG_SETTING_THROUGH_LOAD_SPEED_LIMIT_VAL
+cat      = SC_EXPERT
+patxname = ""vehicle.through_load_speed_limit""
+
 [SDT_BOOL]
 var      = pf.forbid_90_deg
 def      = false
