--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -1358,6 +1358,7 @@ cat      = SC_EXPERT
 [SDT_VAR]
 var      = vehicle.through_load_speed_limit
 type     = SLE_UINT16
+flags    = SF_GUI_VELOCITY
 def      = 15
 min      = 5
 max      = 500
