Feature: Remember the last-used signal between games
(cherry picked from commit a9de36ad23f30d125ed495f0bd84342b594d19df)

See: https://github.com/OpenTTD/OpenTTD/pull/9792

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -4936,6 +4936,14 @@ strval   = STR_CONFIG_SETTING_CYCLE_SIGNAL_PBS
 cat      = SC_ADVANCED
 
 [SDTC_VAR]
+var      = gui.default_signal_type
+type     = SLE_UINT8
+flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC
+def      = 5
+min      = 0
+max      = 5
+
+[SDTC_VAR]
 var      = gui.drag_signals_density
 type     = SLE_UINT8
 flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC
