Add client setting for whether to sync locale settings with server in multiplayer

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -4101,6 +4101,14 @@ def      = nullptr
 post_cb  = [](auto) { MarkWholeScreenDirty(); }
 cat      = SC_BASIC
 
+[SDTC_BOOL]
+var      = client_locale.sync_locale_network_server
+flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC
+def      = false
+str      = STR_CONFIG_SETTING_SYNC_LOCALE_SETTINGS_NETWORK_SERVER
+strhelp  = STR_CONFIG_SETTING_SYNC_LOCALE_SETTINGS_NETWORK_SERVER_HELPTEXT
+cat      = SC_BASIC
+
 [SDT_BOOL]
 var      = vehicle.adjacent_crossings
 def      = true
