Add setting to allow hiding viewport labels of inidivudal waypoints

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -5428,6 +5428,14 @@ def      = true
 str      = STR_CONFIG_SETTING_DUAL_PANE_TRAIN_PURCHASE_WINDOW
 strhelp  = STR_CONFIG_SETTING_DUAL_PANE_TRAIN_PURCHASE_WINDOW_HELPTEXT
 
+[SDTC_BOOL]
+var      = gui.allow_hiding_waypoint_labels
+flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC
+def      = false
+str      = STR_CONFIG_SETTING_ALLOW_HIDE_WAYPOINT_LABEL
+strhelp  = STR_CONFIG_SETTING_ALLOW_HIDE_WAYPOINT_LABEL_HELPTEXT
+post_cb  = [](auto) { MarkWholeScreenDirty(); InvalidateWindowClassesData(WC_WAYPOINT_VIEW, 0); }
+
 ; For the dedicated build we'll enable dates in logs by default.
 [SDTC_BOOL]
 ifdef    = DEDICATED
