--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -68,6 +68,7 @@ static void SharingRailChanged(int32 new_value);
 static bool CheckSharingRoad(int32 &new_value);
 static bool CheckSharingWater(int32 &new_value);
 static bool CheckSharingAir(int32 &new_value);
+static bool TLSettingChanged(int32 p1);
 
 /* End - Callback Functions for the various settings */
 
@@ -1674,6 +1675,16 @@ str      = STR_CONFIG_SETTING_WAGONSPEEDLIMITS
 strhelp  = STR_CONFIG_SETTING_WAGONSPEEDLIMITS_HELPTEXT
 post_cb  = UpdateConsists
 
+[SDT_BOOL]
+base     = GameSettings
+var      = vehicle.max_locomotive_speed_limits
+def      = true
+str      = STR_CONFIG_SETTING_MAXLOCOMOTIVESPEEDS
+strhelp  = STR_CONFIG_SETTING_MAXLOCOMOTIVESPEEDS_HELPTEXT
+proc     = UpdateConsists
+patxname = ""vehicle.max_locomotive_speed_limits""
+
+
 ;; vehicle.slow_road_vehicles_in_curves
 [SDT_XREF]
 extver   = SlXvFeatureTest(XSLFTO_AND, XSLFI_JOKERPP, SL_JOKER_1_25)
@@ -1903,7 +1914,7 @@ var      = station.station_spread
 type     = SLE_UINT8
 def      = 12
 min      = 4
-max      = 64
+max      = 128
 str      = STR_CONFIG_SETTING_STATION_SPREAD
 strhelp  = STR_CONFIG_SETTING_STATION_SPREAD_HELPTEXT
 strval   = STR_CONFIG_SETTING_TILE_LENGTH
@@ -2095,15 +2106,81 @@ str      = STR_CONFIG_SETTING_DISTANT_JOIN_STATIONS
 strhelp  = STR_CONFIG_SETTING_DISTANT_JOIN_STATIONS_HELPTEXT
 post_cb  = [](auto) { DeleteWindowById(WC_SELECT_STATION, 0); }
 
-;; construction.traffic_lights
-;; construction.towns_build_traffic_lights
-;; construction.allow_building_tls_in_towns
-;; construction.traffic_lights_green_phase
-;; construction.max_tlc_size
-;; construction.max_tlc_distance
-[SDT_NULL]
-length   = 6
-extver   = SlXvFeatureTest(XSLFTO_AND, XSLFI_SPRINGPP)
+
+[SDT_BOOL]
+base     = GameSettings
+var      = construction.traffic_lights
+from     = SL_MIN_VERSION
+def      = true
+str      = STR_CONFIG_SETTING_TRAFFIC_LIGHTS
+strhelp  = STR_CONFIG_SETTING_TRAFFIC_LIGHTS_HELPTEXT
+proc     = TLSettingChanged
+cat      = SC_EXPERT
+patxname = ""construction.traffic_lights""
+
+[SDT_BOOL]
+base     = GameSettings
+var      = construction.towns_build_traffic_lights
+from     = SL_MIN_VERSION
+def      = true
+str      = STR_CONFIG_SETTING_TOWNS_BUILD_TRAFFIC_LIGHTS
+strhelp  = STR_CONFIG_SETTING_TOWNS_BUILD_TRAFFIC_LIGHTS_HELPTEXT
+cat      = SC_EXPERT
+patxname = ""construction.towns_build_traffic_lights""
+
+[SDT_BOOL]
+base     = GameSettings
+var      = construction.allow_building_tls_in_towns
+from     = SL_MIN_VERSION
+def      = false
+str      = STR_CONFIG_SETTING_ALLOW_BUILDING_TLS_ON_TOWN_ROADS
+strhelp  = STR_CONFIG_SETTING_ALLOW_BUILDING_TLS_ON_TOWN_ROADS_HELPTEXT
+cat      = SC_EXPERT
+patxname = ""construction.allow_building_tls_in_towns""
+
+[SDT_VAR]
+base     = GameSettings
+var      = construction.traffic_lights_green_phase
+type     = SLE_UINT8
+from     = SL_MIN_VERSION
+def      = 2
+min      = 1
+max      = 16
+str      = STR_CONFIG_SETTING_TRAFFIC_LIGHTS_GREEN_PHASE
+strhelp  = STR_CONFIG_SETTING_TRAFFIC_LIGHTS_GREEN_PHASE_HELPTEXT
+strval   = STR_JUST_INT
+cat      = SC_EXPERT
+patxname = ""construction.traffic_lights_green_phase""
+
+[SDT_VAR]
+base     = GameSettings
+var      = construction.max_tlc_size
+type     = SLE_UINT8
+from     = SL_MIN_VERSION
+guiflags = SGF_0ISDISABLED
+def      = 4
+min      = 1
+max      = 32
+str      = STR_CONFIG_SETTING_MAX_TRAFFIC_LIGHT_CONSIST_SIZE
+strhelp  = STR_CONFIG_SETTING_MAX_TRAFFIC_LIGHT_CONSIST_SIZE_HELPTEXT
+strval   = STR_JUST_INT
+cat      = SC_EXPERT
+patxname = ""construction.max_tlc_size""
+
+[SDT_VAR]
+base     = GameSettings
+var      = construction.max_tlc_distance
+type     = SLE_UINT8
+from     = SL_MIN_VERSION
+def      = 1
+min      = 0
+max      = 4
+str      = STR_CONFIG_SETTING_MAX_TRAFFIC_LIGHT_CONSIST_DISTANCE
+strhelp  = STR_CONFIG_SETTING_MAX_TRAFFIC_LIGHT_CONSIST_DISTANCE_HELPTEXT
+strval   = STR_CONFIG_SETTING_TILE_LENGTH
+cat      = SC_EXPERT
+patxname = ""construction.max_tlc_distance""
+
 
 ##
 [SDT_BOOL]
@@ -3240,15 +3317,16 @@ min      = 0
 max      = 100000
 cat      = SC_EXPERT
 
-# pf.npf.npf_road_trafficlight_penalty
-[SDT_NULL]
-length   = 4
-extver   = SlXvFeatureTest(XSLFTO_AND, XSLFI_SPRINGPP)
-
-# pf.npf.npf_road_trafficlight_penalty
-[SDT_NULL]
-length   = 4
-extver   = SlXvFeatureTest(XSLFTO_AND, XSLFI_CHILLPP, SL_CHILLPP_232)
+[SDT_VAR]
+base     = GameSettings
+var      = pf.npf.npf_road_trafficlight_penalty
+type     = SLE_UINT
+from     = SL_MIN_VERSION
+def      = 2 * NPF_TILE_LENGTH
+min      = 0
+max      = 100000
+str      = STR_NULL
+patxname = ""pf.npf.npf_road_trafficlight_penalty""
 
 [SDT_VAR]
 var      = pf.npf.npf_road_dt_occupied_penalty
@@ -3528,15 +3606,15 @@ min      = 0
 max      = 1000000
 cat      = SC_EXPERT
 
-# pf.yapf.road_trafficlight_penalty
-[SDT_NULL]
-length   = 4
-extver   = SlXvFeatureTest(XSLFTO_AND, XSLFI_SPRINGPP)
-
-# pf.yapf.road_trafficlight_penalty
-[SDT_NULL]
-length   = 4
-extver   = SlXvFeatureTest(XSLFTO_AND, XSLFI_CHILLPP, SL_CHILLPP_232)
+[SDT_VAR]
+base     = GameSettings
+var      = pf.yapf.road_trafficlight_penalty
+type     = SLE_UINT
+from     = SL_MIN_VERSION
+def      = 2 * YAPF_TILE_LENGTH
+min      = 0
+max      = 1000000
+patxname = ""pf.yapf.road_trafficlight_penalty""
 
 [SDT_VAR]
 var      = pf.yapf.road_stop_penalty
