Added speed limits

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -2181,6 +2181,130 @@ strval   = STR_CONFIG_SETTING_TILE_LENGTH
 cat      = SC_EXPERT
 patxname = ""construction.max_tlc_distance""
 
+## Speed limits
+[SDT_BOOL]
+base     = GameSettings
+var      = vehicle.limit_vehicle_speed_in_towns
+from     = SL_MIN_VERSION
+def      = false
+str      = STR_CONFIG_SETTING_LIMITVEHSPEED_IN
+cat      = SC_EXPERT
+patxname = ""vehicle.limit_vehicle_speed_in_towns""
+
+[SDT_VAR]
+base     = GameSettings
+var      = vehicle.max_veh_speed_in_towns_two_way
+type     = SLE_UINT16
+from     = SL_MIN_VERSION
+def      = 50
+min      = 0
+max      = 250
+str      = STR_CONFIG_SETTING_SET_LIMITVEHSPEED_IN_TNEW
+strval   = STR_JUST_INT
+cat      = SC_EXPERT
+patxname = ""vehicle.max_veh_speed_in_towns_two_way""
+
+[SDT_VAR]
+base     = GameSettings
+var      = vehicle.max_veh_speed_in_towns_one_way
+type     = SLE_UINT16
+from     = SL_MIN_VERSION
+def      = 70
+min      = 0
+max      = 250
+str      = STR_CONFIG_SETTING_SET_LIMITVEHSPEED_IN_OWOW
+strval   = STR_JUST_INT
+cat      = SC_EXPERT
+patxname = ""vehicle.max_veh_speed_in_towns_one_way""
+
+[SDT_BOOL]
+base     = GameSettings
+var      = vehicle.limit_vehicle_speed_outside_towns
+from     = SL_MIN_VERSION
+def      = false
+str      = STR_CONFIG_SETTING_LIMITVEHSPEED_OUT
+cat      = SC_EXPERT
+patxname = ""vehicle.limit_vehicle_speed_outside_towns""
+
+[SDT_VAR]
+base     = GameSettings
+var      = vehicle.max_veh_speed_out_towns_two_way
+type     = SLE_UINT16
+from     = SL_MIN_VERSION
+def      = 90
+min      = 0
+max      = 250
+str      = STR_CONFIG_SETTING_SET_LIMITVEHSPEED_OUT_TNEW
+strval   = STR_JUST_INT
+cat      = SC_EXPERT
+patxname = ""vehicle.max_veh_speed_out_towns_two_way""
+
+[SDT_VAR]
+base     = GameSettings
+var      = vehicle.max_veh_speed_out_towns_one_way
+type     = SLE_UINT16
+from     = SL_MIN_VERSION
+def      = 130
+min      = 0
+max      = 250
+str      = STR_CONFIG_SETTING_SET_LIMITVEHSPEED_OUT_OWOW
+strval   = STR_JUST_INT
+cat      = SC_EXPERT
+patxname = ""vehicle.max_veh_speed_out_towns_one_way""
+
+[SDT_BOOL]
+base     = GameSettings
+var      = vehicle.limit_vehicle_speed_tunnel_bridge
+from     = SL_MIN_VERSION
+def      = false
+str      = STR_CONFIG_SETTING_LIMITVEHSPEED_WORMHOLE
+cat      = SC_EXPERT
+patxname = ""vehicle.limit_vehicle_speed_tunnel_bridge""
+
+[SDT_BOOL]
+base     = GameSettings
+var      = vehicle.limit_vehicle_speed_tunnel_bridge_enhanced
+from     = SL_MIN_VERSION
+def      = false
+str      = STR_CONFIG_SETTING_LIMITVEHSPEED_WORMHOLE_ENHANCED
+cat      = SC_EXPERT
+patxname = ""vehicle.limit_vehicle_speed_tunnel_bridge_enhanced""
+
+[SDT_VAR]
+base     = GameSettings
+var      = vehicle.max_veh_speed_tunnel_bridge
+type     = SLE_UINT16
+from     = SL_MIN_VERSION
+def      = 90
+min      = 0
+max      = 250
+str      = STR_CONFIG_SETTING_SET_LIMITVEHSPEED_WORMHOLE
+strval   = STR_JUST_INT
+cat      = SC_EXPERT
+patxname = ""vehicle.max_veh_speed_tunnel_bridge""
+
+[SDT_BOOL]
+base     = GameSettings
+var      = vehicle.limit_vehicle_speed_highway
+from     = SL_MIN_VERSION
+def      = false
+str      = STR_CONFIG_SETTING_LIMITVEHSPEED_HIGHWAY
+cat      = SC_EXPERT
+patxname = ""vehicle.limit_vehicle_speed_highway""
+
+[SDT_VAR]
+base     = GameSettings
+var      = vehicle.max_veh_speed_highway
+type     = SLE_UINT16
+from     = SL_MIN_VERSION
+def      = 150
+min      = 0
+max      = 1000
+str      = STR_CONFIG_SETTING_SET_LIMITVEHSPEED_HIGHWAY
+strval   = STR_JUST_INT
+cat      = SC_EXPERT
+patxname = ""vehicle.max_veh_speed_highway""
+
 
 ##
 [SDT_BOOL]
@@ -3329,6 +3453,17 @@ str      = STR_NULL
 patxname = ""pf.npf.npf_road_trafficlight_penalty""
 
 [SDT_VAR]
+base     = GameSettings
+var      = pf.npf.npf_road_two_way_penalty
+type     = SLE_UINT
+from     = SL_MIN_VERSION
+def      = (NPF_TILE_LENGTH / 2)
+min      = 0
+max      = 100000
+str      = STR_NULL
+patxname = ""pf.npf.npf_road_two_way_penalty""
+
+[SDT_VAR]
 var      = pf.npf.npf_road_dt_occupied_penalty
 type     = SLE_UINT
 from     = SLV_130
@@ -3615,6 +3750,16 @@ def      = 2 * YAPF_TILE_LENGTH
 min      = 0
 max      = 1000000
 patxname = ""pf.yapf.road_trafficlight_penalty""
+
+[SDT_VAR]
+base     = GameSettings
+var      = pf.yapf.road_two_way_penalty
+type     = SLE_UINT
+from     = SL_MIN_VERSION
+def      = 1 * YAPF_TILE_LENGTH
+min      = 0
+max      = 1000000
+patxname = ""pf.yapf.road_two_way_penalty""
 
 [SDT_VAR]
 var      = pf.yapf.road_stop_penalty
