Usage of second lane

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -2306,6 +2306,48 @@ cat      = SC_EXPERT
 patxname = ""vehicle.max_veh_speed_highway""
 
 
+[SDT_BOOL]
+base     = GameSettings
+var      = vehicle.try_to_use_two_lanes_on_highway
+from     = SL_MIN_VERSION
+def      = false
+str      = STR_CONFIG_SETTING_BOTH_LANES_ON_HIGHWAY
+cat      = SC_EXPERT
+patxname = ""vehicle.try_to_use_two_lanes_on_highway""
+
+[SDT_VAR]
+base     = GameSettings
+var      = vehicle.chance_of_going_to_second_lane
+type     = SLE_UINT8
+def      = 2
+min      = 1
+max      = 4
+str      = STR_CONFIG_SETTING_CHANCE_OF_GOING_TO_SECOND_LANE
+strval   = STR_CONFIG_SETTING_CHANCE_OF_GOING_TO_SECOND_LANE_VALUE
+patxname = ""vehicle.chance_of_going_to_second_lane""
+
+[SDT_VAR]
+base     = GameSettings
+var      = vehicle.min_speed_for_second_lane
+type     = SLE_UINT16
+from     = SL_MIN_VERSION
+def      = 120
+min      = 0
+max      = 500
+str      = STR_CONFIG_SETTING_MIN_SPEED_FOR_SECOND_LANE
+strval   = STR_JUST_INT
+cat      = SC_EXPERT
+patxname = ""vehicle.min_speed_for_second_lane""
+
+[SDT_BOOL]
+base     = GameSettings
+var      = vehicle.only_buses_on_second_lane_on_highway
+from     = SL_MIN_VERSION
+def      = false
+str      = STR_CONFIG_SETTING_ONLY_BUSES_ON_SECOND_LANE
+cat      = SC_EXPERT
+patxname = ""vehicle.only_buses_on_second_lane_on_highway""
+
 ##
 [SDT_BOOL]
 var      = economy.inflation
