--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -2181,6 +2181,46 @@ strval   = STR_CONFIG_SETTING_TILE_LENGTH
 cat      = SC_EXPERT
 patxname = ""construction.max_tlc_distance""
 
+## Road signs
+[SDT_BOOL]
+base     = GameSettings
+var      = construction.road_signs
+from     = SL_MIN_VERSION
+def      = true
+str      = STR_CONFIG_SETTING_ROAD_SIGNS
+strhelp  = STR_CONFIG_SETTING_ROAD_SIGNS_HELPTEXT
+proc     = RSSettingChanged
+cat      = SC_EXPERT
+patxname = ""construction.road_signs""
+[SDT_BOOL]
+base     = GameSettings
+var      = construction.towns_build_road_signs
+from     = SL_MIN_VERSION
+def      = true
+str      = STR_CONFIG_SETTING_TOWNS_BUILD_ROAD_SIGNS
+strhelp  = STR_CONFIG_SETTING_TOWNS_BUILD_ROAD_SIGNS_HELPTEXT
+cat      = SC_EXPERT
+patxname = ""construction.towns_build_road_signs""
+[SDT_BOOL]
+base     = GameSettings
+var      = construction.allow_building_rs_in_towns
+from     = SL_MIN_VERSION
+def      = true
+str      = STR_CONFIG_SETTING_ALLOW_BUILDING_RS_ON_TOWN_ROADS
+strhelp  = STR_CONFIG_SETTING_ALLOW_BUILDING_RS_ON_TOWN_ROADS_HELPTEXT
+cat      = SC_EXPERT
+patxname = ""construction.allow_building_rs_in_towns""
+[SDT_BOOL]
+base     = GameSettings
+var      = construction.allow_eye_candy_road_signs
+from     = SL_MIN_VERSION
+def      = true
+str      = STR_CONFIG_SETTING_AUTO_BUILD_EYE_CANDY_ROAD_SIGNS
+strhelp  = STR_CONFIG_SETTING_AUTO_BUILD_EYE_CANDY_ROAD_SIGNS_HELPTEXT
+cat      = SC_EXPERT
+patxname = ""construction.allow_eye_candy_road_signs""
+
+
 ## Speed limits
 [SDT_BOOL]
 base     = GameSettings
@@ -2305,6 +2345,14 @@ strval   = STR_JUST_INT
 cat      = SC_EXPERT
 patxname = ""vehicle.max_veh_speed_highway""
 
+[SDT_BOOL]
+base     = GameSettings
+var      = vehicle.one_way_roads_out_town_as_highway
+from     = SL_MIN_VERSION
+def      = false
+str      = STR_CONFIG_SETTING_ONE_WAY_ROADS_OUT_OF_TOWN_AS_HIGHWAY
+cat      = SC_EXPERT
+patxname = ""vehicle.one_way_roads_out_town_as_highway""
 
 [SDT_BOOL]
 base     = GameSettings
@@ -3496,10 +3544,33 @@ patxname = ""pf.npf.npf_road_trafficlight_penalty""
 
 [SDT_VAR]
 base     = GameSettings
-var      = pf.npf.npf_road_two_way_penalty
+var      = pf.npf.npf_road_one_way_penalty
 type     = SLE_UINT
 from     = SL_MIN_VERSION
 def      = (NPF_TILE_LENGTH / 2)
+min      = 0
+max      = 100000
+str      = STR_NULL
+patxname = ""pf.npf.npf_road_one_way_penalty""
+
+[SDT_VAR]
+base     = GameSettings
+var      = pf.npf.npf_road_town_penalty
+type     = SLE_UINT
+from     = SL_MIN_VERSION
+def      = 2* NPF_TILE_LENGTH
+min      = 0
+max      = 100000
+str      = STR_NULL
+patxname = ""pf.npf.npf_road_town_penalty""
+
+
+[SDT_VAR]
+base     = GameSettings
+var      = pf.npf.npf_road_two_way_penalty
+type     = SLE_UINT
+from     = SL_MIN_VERSION
+def      = 2 * NPF_TILE_LENGTH
 min      = 0
 max      = 100000
 str      = STR_NULL
@@ -3798,10 +3869,30 @@ base     = GameSettings
 var      = pf.yapf.road_two_way_penalty
 type     = SLE_UINT
 from     = SL_MIN_VERSION
-def      = 1 * YAPF_TILE_LENGTH
+def      = 2 * YAPF_TILE_LENGTH
 min      = 0
 max      = 1000000
 patxname = ""pf.yapf.road_two_way_penalty""
+
+[SDT_VAR]
+base     = GameSettings
+var      = pf.yapf.road_one_way_penalty
+type     = SLE_UINT
+from     = SL_MIN_VERSION
+def      = 1 * YAPF_TILE_LENGTH
+min      = 0
+max      = 1000000
+patxname = ""pf.yapf.road_one_way_penalty""
+
+[SDT_VAR]
+base     = GameSettings
+var      = pf.yapf.road_town_penalty
+type     = SLE_UINT
+from     = SL_MIN_VERSION
+def      = 2 * YAPF_TILE_LENGTH
+min      = 0
+max      = 1000000
+patxname = ""pf.yapf.road_town_penalty""
 
 [SDT_VAR]
 var      = pf.yapf.road_stop_penalty
