--- a/media/baseset/CMakeLists.txt
+++ b/media/baseset/CMakeLists.txt
@@ -23,6 +23,7 @@ set(BASESET_OTHER_SOURCE_FILES
         ${CMAKE_CURRENT_SOURCE_DIR}/route_step.grf
         ${CMAKE_CURRENT_SOURCE_DIR}/tracerestrict.grf
         ${CMAKE_CURRENT_SOURCE_DIR}/trafficlights.grf
+        ${CMAKE_CURRENT_SOURCE_DIR}/trafficsigns.grf
 )
 
 if (UNIX AND NOT APPLE)
