Settings GUI: Label sprite_zoom_min as should be left at default

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -81,6 +81,7 @@ static int64 LinkGraphDistModeXrefChillPP(int64 val);
 
 static bool LinkGraphDistributionSettingGUI(SettingOnGuiCtrlData &data);
 static bool OrderTownGrowthRate(SettingOnGuiCtrlData &data);
+static bool SpriteZoomMinSettingGUI(SettingOnGuiCtrlData &data);
 
 /* End - GUI callbacks */
 
@@ -4384,7 +4385,7 @@ startup  = true
 [SDTC_VAR]
 var      = gui.sprite_zoom_min
 type     = SLE_UINT8
-flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC | SF_GUI_DROPDOWN
+flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC | SF_GUI_DROPDOWN | SF_GUI_ADVISE_DEFAULT
 def      = ZOOM_LVL_MIN
 min      = ZOOM_LVL_MIN
 max      = ZOOM_LVL_OUT_4X
@@ -4392,6 +4393,8 @@ str      = STR_CONFIG_SETTING_SPRITE_ZOOM_MIN
 strhelp  = STR_CONFIG_SETTING_SPRITE_ZOOM_MIN_HELPTEXT
 strval   = STR_CONFIG_SETTING_SPRITE_ZOOM_LVL_MIN
 post_cb  = SpriteZoomMinChanged
+guiproc  = SpriteZoomMinSettingGUI
+cat      = SC_EXPERT
 
 [SDTC_BOOL]
 var      = gui.population_in_label
